# SHACKLE

./: CONFORMANCE.md  INTEGRATIONS.md  LICENSE  README.md  SP-1.0-SPECIFICATION.md  index.html  pyproject.toml  registry.html  registry.json  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: certification_request.yml
.github/workflows/: certification-verify.yml  ci.yml
examples/: shackle_nodewatch.py
fixtures/: README.md  conformance.json  conformance_combined.json
shackle/: __init__.py  autogen_shackle_wrapper.py  conformance.py  core.py  litellm_shackle_guardrail.py
tests/: test_autogen_wrapper.py  test_conformance.py  test_core.py  test_litellm_guardrail.py
v2/: README.md
v2/clients/rust/: Cargo.toml
v2/clients/typescript/: package.json
v2/compliance/: AI-Agent-Liability-Shield.md  README.md  license_keygen.py
v2/daemon/: DEPLOYMENT.md  README.md  audit.py  daemon.py  decision.py  requirements.txt  state.py  test_daemon.py  test_state_atomic.py
v2/protocol/: README.md  shackle_service.proto
v2/spec/: SPEC.md  decide.py  ledger.py
v2/tests/: test_conformance.py  test_conformance_combined.py  test_daemon_decide_wiring.py  test_decide_properties.py  test_ledger.py  test_v2_conformance.py
